<resources>
    <string name="app_name">Sport News</string>
    <string name="heading_separator">|</string>
    <string name="no_news">At this moment there are no articles for you. Please try again later.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Sport News Settings</string>
    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_category_value</string>

    <!-- Label for order-by category option [CHAR LIMIT=20] -->
    <string name="settings_order_by_category_label">Category</string>
    <string name="settings_order_by_category_value" translatable="false">category</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>

    <!-- Strings For Production Office Preference [CHAR LIMIT=30] -->
    <string name="settings_production_office_label">Production Office</string>
    <string name="settings_production_office_key" translatable="false">production office</string>
    <string name="settings_production_office_default" translatable="false">@string/settings_production_office_uk_value</string>

    <!-- Label for production office UK option [CHAR LIMIT=20] -->
    <string name="settings_production_office_uk_label">UK</string>
    <string name="settings_production_office_uk_value" translatable="false">uk</string>

    <!-- Label for production office AUS option [CHAR LIMIT=20] -->
    <string name="settings_production_office_aus_label">AUS</string>
    <string name="settings_production_office_aus_value" translatable="false">aus</string>

    <!-- Label for production office US option [CHAR LIMIT=20] -->
    <string name="settings_production_office_us_label">US</string>
    <string name="settings_production_office_us_value" translatable="false">us</string>
</resources>
